--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -28,7 +28,7 @@
 }
 
  @mixin container() {
-    width: 320px;
+    min-width: 320px;
     margin: 0 auto;
     @media #{$tablet-widths} {
         width: 640px;
